# pushel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.json  notifications.json
.github/workflows/: release.yml
src/: main.rs  tui.rs
