[package]
name = "pushel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.139"
warp = "0.4.2"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
user-idle = "0.6"
reqwest = { version = "0.12", features = ["json"] }
x11 = { version = "2.21", features = ["xlib"] }
