[package]
name = "pushel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.139"
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
user-idle = "0.6"
reqwest = { version = "0.12", features = ["json"] }
x11 = { version = "2.21", features = ["xlib"] }
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
